# RustShield

./: .gitignore  CFP-LSSEU-2026.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  kunit-tests.yml  verus-proofs.yml
docs/: architecture.md  hotswap-protocol.md  migration-guide.md  proof-library.md
examples/e1000e_demo/: Cargo.toml
examples/e1000e_demo/src/: c_driver_shadow.rs  hotswap_demo.rs  lib.rs
examples/simple_net/: Cargo.toml
examples/simple_net/src/: lib.rs
kernel/bpf_driver_canary/: Cargo.toml
kernel/bpf_driver_canary/src/: baseline.rs  canary.rs  lib.rs  oracle.rs
kernel/driver_migration_tests/: Cargo.toml  kunitconfig
kernel/driver_migration_tests/src/: lib.rs
kernel/rust_driver_hotswap/: Cargo.toml  Kconfig
kernel/rust_driver_hotswap/src/: ioctl.rs  lib.rs  protocol.rs  state_handoff.rs  sysfs.rs
proposals/: LSS-EU-2026-RUSTSHIELD.md
rfcs/: 0001-rust-driver-hotswap-subsystem.md  0002-verus-proof-library.md  0003-bpf-canary-oracle.md
rustshield-migrate/: Cargo.toml
rustshield-migrate/src/: analyze.rs  main.rs  report.rs  skeleton.rs  verus_hints.rs
scripts/: benchmark.sh  demo.sh  setup_dev_env.sh
verus/: smoke_test.rs
verus/verus_kernel_proofs/: Cargo.toml
verus/verus_kernel_proofs/src/: dma_boundary.rs  error_codes.rs  error_recovery.rs  interrupt_safety.rs  io_region.rs  irq_liveness.rs  lib.rs  lock_ordering.rs  memory_safety.rs  power_state.rs  refcount.rs  register_access.rs  state_invariants.rs  timer_safety.rs  workqueue_safety.rs
verus/verus_spec/: Cargo.toml
verus/verus_spec/src/: driver_spec.rs  lib.rs  state_machine.rs
