[workspace]
resolver = "2"
members = [
    "kernel/bpf_driver_canary",
    "verus/verus_kernel_proofs",
    "verus/verus_spec",
    "rustshield-migrate",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/yogeshsardana/RustShield"

[workspace.dependencies]
bpf-canary = { path = "kernel/bpf_driver_canary" }
verus-proofs = { path = "verus/verus_kernel_proofs" }
verus-spec = { path = "verus/verus_spec" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
