[package]
name = "rustshield-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rustshield-migrate"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
