[package]
name = "e1000e-demo"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
kernel = { git = "https://github.com/Rust-for-Linux/linux", branch = "rust-nightly" }
verus-proofs = { workspace = true }
bpf-canary = { workspace = true }
