[package]
name = "kernel-rust-driver-hotswap"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
kernel = { git = "https://github.com/Rust-for-Linux/linux", branch = "rust-nightly" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
